# MiAM_eurobot2018

./: README.md
Code_BBB/: ARMCrossCompilationSetup.tex  README.md
Code_BBB/BBBEurobot/: CMakeLists.txt
Code_BBB/BBBEurobot/doc/: Mainpage.dox
Code_BBB/BBBEurobot/src/: ADNS9800Driver.c  Ax12Driver.c  BBBGpio.c  BeagleboneCape.c  I2C-Wrapper.c  KalmanFilter.c  L6470Driver.c  MPC23017Driver.c  MaestroServoDriver.c  Metronome.c  PCA9635Driver.c  SPI-Wrapper.c
Code_BBB/EurobotCode/: CMakeLists.txt
Code_BBB/EurobotCode/include/: Localisation.h  Robot.h
Code_BBB/EurobotCode/src/: Localisation.c
Code_BBB/TestSensors/include/: TestSensors.h
Code_BBB/TestSensors/src/: Main.c  TestSensors.c
Electronics/: BeagleboneCape.pcb  README.md
Electronics/Libraries/: Eurobot.cmx  Eurobot.ssx  pinheader.psx  pinheader.ssl  pinheader.ssx
Electronique/: ArchitectureElec.odg  BeagleboneCape.pcb  BeagleboneCape.sch  README.md  ServoDriver.pcb  ServoDriver.sch
Electronique/Bibliotheques/: Eurobot.cml  Eurobot.cmx  Eurobot.psl  Eurobot.psx  Eurobot.ssl  Eurobot.ssx  pinheader.cml  pinheader.cmx  pinheader.psl  pinheader.psx  pinheader.ssl  pinheader.ssx
Electronique/Libraries/: Eurobot.cml  Eurobot.psl  Eurobot.psx  Eurobot.ssl  Eurobot.ssx  pinheader.cml  pinheader.cmx  pinheader.psl  pinheader.ssl
ProgrammationBBB/: README.md  SetupCrossCompilation.tex
ProgrammationBBB/BBBEurobot/: BBBEurobotTemplate.pc  CMakeLists.txt  Eurobot-00A0.dts
ProgrammationBBB/BBBEurobot/doc/: Doxyfile  Mainpage.dox
ProgrammationBBB/BBBEurobot/include/BBBEurobot/: ADNS9800Driver.h  Ax12Driver.h  BBBEurobot.h  BBBGpio.h  BeagleboneCape.h  I2C-Wrapper.h  IMUDriver.h  IRRecieverDriver.h  L6470Driver.h  LCDDriver.h  MaestroServoDriver.h  PCA9635Driver.h  PCAServoDriver.h  TCS3472ColorSensorDriver.h
ProgrammationBBB/BBBEurobot/src/: ADNS9800Driver.c  BBBGpio.c  BeagleboneCape.c  I2C-Wrapper.c  IMUDriver.c  IRRecieverDriver.c  KalmanFilter.c  L6470Driver.c  LCDDriver.c  MaestroServoDriver.c  PCA9635Driver.c  PCAServoDriver.c  TCS3472ColorSensorDriver.c
ProgrammationBBB/CodePrincipal2017/: CMakeLists.txt
ProgrammationBBB/CodePrincipal2017/src/: Config.h  CurrentPosition.c  Global.h  Initialize.c  Initialize.h  MainLoop.c  Motion.c  Motion.h  Strategy.c  Strategy.h
ProgrammationBBB/EurobotCode/: CMakeLists.txt
ProgrammationBBB/EurobotCode/include/: MotionController.h  Robot.h  Strategy.h
ProgrammationBBB/EurobotCode/src/: Localisation.c  MainLoop.c  MotionController.c  Robot.c  Strategy.c
ProgrammationBBB/LogAnalysis/: CSVPlot.py
ProgrammationBBB/TestADNS/: CMakeLists.txt
ProgrammationBBB/TestADNS/src/: Main.c
ProgrammationBBB/TestSensors/: CMakeLists.txt
Vision/: README.md  coord_points_img9.py  detect_chessboard.py  undistort.py  undistort_bis.py
Vision/Fisheye/: CMakeLists.txt
Vision/Fisheye/exec/: fisheye_calibration  fisheye_calibration_v2  fisheye_calibration_v3
Vision/Fisheye/include/Fisheye/: fisheye_calibration.hpp
Vision/Fisheye/src/: fisheye_calibration-in.cpp  fisheye_calibration.cpp
Vision/test_fisheye_quentin/: calibrate.py  undistort.py
simulation/Table_base_mobile/init/: Table_Base_Mobile_V0C_DataFile.m  extractLogsout.m  startup_Contact_Forces.m
simulation/Table_base_mobile/lib/: Arbre_moteur_Nema17_Default_sldprt.STEP  BASE_MOBILE_V0_LIB.slx  Base_plaque_inf_Default_sldprt.STEP  CONTACT_ROUE_SOL_LIB.slx  ChateauEauP2 v10_Default_sldprt.STEP  ChateauEauP2 v2(Mirror)_Default_sldprt.STEP  EpurationEau v19_Default_sldprt.STEP  Filet v4_Default_sldprt.STEP  Interrupteur v3_Default_sldprt.STEP  LEFT_WHEEL_LIB.slx  MoteurNema17_Default_sldprt.STEP  RIGHT_WHEEL_LIB.slx  RampeBallon v10_Default_sldprt.STEP  RampeBallon v2_Default_sldprt.STEP  RobotCities-2018-FINAL-v15117_Default_sldprt.STEP  SIMULINK_PS_LIB.slx  TABLE_LIB.slx  (+17 more)
(+16 files in other folders)
